# everybody-codes

2024/: Day01.hs  Day02.hs  cabal.project  ebc2024.cabal
