cabal-version:   3.0
name:            ebc2024
version:         0.1.0.0
build-type:      Simple

library solutions
    exposed-modules:
        Day02
      , Day01
    build-depends:   
        base
      , my-tools
      , parsec
      , containers
      , split
      , comonad
      , mtl
      , monad-loops
      , criterion
      , vector
      , array
    hs-source-dirs:   .
    default-extensions: DeriveFunctor
    default-language: Haskell2010
